force-app/main/default/objects/KASA__c/KASA__c.object-meta.xml
<CustomObject>
    <label>KASA</label>
    <nameField>
        <displayFormat>K-{0000}</displayFormat>
        <label>İşlem No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KASA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>