force-app/main/default/objects/KASA__c/fields/Ali_Bey_Harcama__c.field-meta.xml
<CustomField>
    <fullName>Ali_Bey_Harcama__c</fullName>
    <label>Ali Bey Harcama</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>