force-app/main/default/objects/KASA__c/fields/Ali_Bey_Verilen_Para__c.field-meta.xml
<CustomField>
    <fullName>Ali_Bey_Verilen_Para__c</fullName>
    <label>Ali Bey&apos;e Verilen Para</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>