force-app/main/default/objects/KASA__c/fields/AliBakiye__c.field-meta.xml
<CustomField>
    <fullName>AliBakiye__c</fullName>
    <formula>Ana_Kasa__r.Alinin_ald_klar_toplam__c  -   Ana_Kasa__r.ali_toplam_harcama__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ali Bakiye</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>