force-app/main/default/objects/KASA__c/fields/Ana_Kasa__c.field-meta.xml
<CustomField>
    <fullName>Ana_Kasa__c</fullName>
    <label>Ana Kasa</label>
    <referenceTo>Ana_Kasa__c</referenceTo>
    <relationshipLabel>KASA</relationshipLabel>
    <relationshipName>KASA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>