force-app/main/default/objects/KASA__c/fields/Emine_Han_m_a_Verilen_Para__c.field-meta.xml
<CustomField>
    <fullName>Emine_Han_m_a_Verilen_Para__c</fullName>
    <label>Emine Hanım&apos;a Verilen Para</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>