force-app/main/default/objects/KASA__c/fields/Emine_Han_m_Bakiye__c.field-meta.xml
<CustomField>
    <fullName>Emine_Han_m_Bakiye__c</fullName>
    <formula>Ana_Kasa__r.Emine_nin_Ald_klar_Toplam__c -  Ana_Kasa__r.Emine_Toplam_Harcama__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emine Hanım Bakiye</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>