force-app/main/default/objects/KASA__c/fields/Emine_Harcama__c.field-meta.xml
<CustomField>
    <fullName>Emine_Harcama__c</fullName>
    <label>Emine Harcama</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>