force-app/main/default/objects/KASA__c/fields/Harcama_Kalemi__c.field-meta.xml
<CustomField>
    <fullName>Harcama_Kalemi__c</fullName>
    <label>Harcama Kalemi</label>
    <length>100</length>
    <type>Text</type>
</CustomField>