force-app/main/default/objects/KASA__c/fields/Kasa_Bakiye__c.field-meta.xml
<CustomField>
    <fullName>Kasa_Bakiye__c</fullName>
    <formula>Ana_Kasa__r.Kasaya_Toplam_Gelen__c -  Ana_Kasa__r.Alinin_ald_klar_toplam__c  - Ana_Kasa__r.Emine_nin_Ald_klar_Toplam__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kasa Bakiye</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>