force-app/main/default/objects/KASA__c/fields/Kasaya_Gelen_Para__c.field-meta.xml
<CustomField>
    <fullName>Kasaya_Gelen_Para__c</fullName>
    <label>Kasaya Gelen Para</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>