force-app/main/default/objects/KASA__c/recordTypes/Verilen_Birim.recordType-meta.xml
<RecordType>
    <fullName>Verilen_Birim</fullName>
    <active>true</active>
    <label>Verilen Birim</label>
</RecordType>